--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <title>RANZ Apprentice Payrate Calculator</title>
+  <title>RANZ Payrate Calculator</title>
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <style>
     :root {
@@ -217,10 +217,10 @@
     </header>
 
     <p class="tagline">
-      This tool helps you look at the full value of a roofing apprenticeship, not just the hourly rate.
-      Put in the details of a job offer and it will show you the total weekly and yearly value of the package,
-      including things like vehicle use, fuel, uniforms, training support and extra leave. It is a guide only and does not replace
-      independent financial advice.
+      This tool helps you look past the hourly rate and understand the full value of a roofing career opportunity. 
+      Once you put the details in, it shows the total weekly and yearly value of the whole package, including things like training support, vehicle use, fuel, uniforms and any extra leave. 
+      It also gets you thinking about the non monetary benefits that influence your day to day life, not just the figure printed next to the hourly rate. 
+      It is designed to help you slow down, take everything into account, and make a well informed decision. It is a guide only and does not replace independent financial advice.
     </p>
 
     <div class="grid">
