--- a/index.html
+++ b/index.html
@@ -211,7 +211,7 @@
       <!-- Make sure this filename matches what you commit to the repo -->
       <img src="RANZ Logo RGB.png" alt="Roofing Association of New Zealand logo" />
       <div>
-        <h1>RANZ Apprentice Payrate Calculator</h1>
+        <h1>RANZ Employee Payrate Calculator</h1>
         <p class="org-tagline">Roofing Association of New Zealand</p>
       </div>
     </header>
